# upjobs

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/upjobs/: __init__.py  ai.py  cli.py  config.py  processing.py  scraping.py  utils.py
src/upjobs/connectors/: __init__.py  airtable.py  sheets.py  supabase.py
supabase/migrations/: 20250101T000001__01_create_scrape_requests.sql  20250101T000002__02_create_jobs.sql  20250101T000003__03_create_search_results.sql  20250101T000004__04_alter_jobs_add_saved.sql  20250101T000005__05_create_applications.sql  20250101T000006__06_create_job_notes.sql  20250101T000007__07_create_application_status_history.sql  20250101T000008__08_alter_scrape_requests_upload_ts_default.sql  20250101T000009__09_alter_jobs_add_description_summary.sql
templates/prompts/: job_summary.j2
